--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.7.5",
-    "@cloudflare/workers-types": "^4.20250310.0",
+    "@cloudflare/vitest-pool-workers": "^0.6.4",
+    "@cloudflare/workers-types": "^4.20250214.0",
+    "@tsndr/cloudflare-worker-jwt": "^3.1.3",
     "typescript": "^5.5.2",
-    "vitest": "~3.0.7",
-    "wrangler": "latest"
-  }
+    "vitest": "~2.1.9",
+    "wrangler": "^3.109.2"
+  },
+  "dependencies": {
+    "itty-router": "^5.0.18"
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
